--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -34,7 +34,7 @@
   <section>
     <div class="container mt-5 mb-5">
       <div class="row">
-        <div class="col-12 col-md-6 text-center text-md-left">
+        <div class="col-12 col-md-5 mt-5 text-center text-md-left">
           <h1>You drive.We will handle the rest.</h1>
           <p>All-inclusive,usage-based car subscriptions</p>
           <div class="row">
@@ -51,8 +51,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6">
-          <p>insert image</p>
+        <div class="col-12 col-md-7 text-center mt-5 mb-5">
+          <img src="assets/960x0.jpg" alt="car" class="carImage">
         </div>
       </div>
     </div>
@@ -62,40 +62,40 @@
       <div class="container">
         <div class="row mb-5 mt-5">
           <div class="col-12 mt-5 mb-5 text-center">
-            <div class="bar mb-4 mt-4 barMargin"></div>
-            <h3>Simple and handy process</h3>
+            <div class="bar mb-5 mt-5 barMargin"></div>
+            <h3 class="mb-3">Simple and handy process</h3>
             <p class="mb-4">All-inclusive,usage-based car subscriptions.Monthly plan based on how much you drive that includes parking,insurance,maintenance and more.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/file-text.svg" class="processImage mb-2">
             <h5>Text us</h5>
-            <p>When you want your car.No app needed,just an online account.Real human operators.</p>
+            <p class="mb-5">When you want your car.No app needed,just an online account.Real human operators.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/map-pin.svg" class="processImage mb-2">
             <h5>We deliver</h5>
-            <p>Your car will arrive at your door-clean and fully fueled.</p>
+            <p class="mb-5">Your car will arrive at your door-clean and fully fueled.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/activity.svg" class="processImage mb-2">
             <h5>You drive</h5>
-            <p>Hop in and go with full insurance,FasTrak,phone accessories,and unlimited mileage.</p>
+            <p class="mb-5">Hop in and go with full insurance,FasTrak,phone accessories,and unlimited mileage.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-5">
             <img src="assets/check-circle.svg" class="processImage mb-2">
             <h5>We pick it up</h5>
-            <p>It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
+            <p class="mb-5">It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
   <section>
-    <div class="container mb-4 mt-4">
+    <div class="container">
       <div class="row">
         <div class="col-12 col-lg-4 text-center text-lg-left">
-          <div class="bar mt-4 mb-4 barMargin d-md-none"></div>
-          <div class="bar mt-4 mb-4 d-none d-md-block"></div>
+          <div class="bar mt-5 mb-4 barMargin d-md-none"></div>
+          <div class="bar mt-5 mb-4 d-none d-md-block"></div>
         </div>
       </div>
       <div class="row">
@@ -120,7 +120,7 @@
             </div>
             <div class="col-10">
               <h4>Self service</h4>
-              <p>We deliver within 3 blocks and unlock it whenever you are ready for more flexibility on time, 24/7.</p>
+              <p class="mb-5">We deliver within 3 blocks and unlock it whenever you are ready for more flexibility on time, 24/7.</p>
             </div>
           </div>
         </div>
@@ -132,36 +132,36 @@
       <div class="container">
         <div class="row">
           <div class="col-12 mt-5 mb-4 text-center">
-            <div class="bar mb-4 barMargin"></div>
+            <div class="bar mb-4 mt-5 barMargin"></div>
             <h2 class="mb-4">OUR TEAM</h2>
             <p class="mb-5"> A Perfect blend of creativity and technical wizardry.The best people formulate for great customer experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/206x206.png" alt="206x206" class="ourTeamImg mb-4">
+            <img src="assets/206x206.png" alt="206x206" class="ourTeamImg mb-5">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
             <p class="opacity mb-4">Founder</p>
-            <p>He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
+            <p class="mb-5">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-4">
+            <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-5">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
             <p class="opacity mb-4">UI Developer</p>
-            <p>10+ years experience in frontend technologies.</p>
+            <p class="mb-5">10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-4 ">
+            <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-5">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
             <p class="opacity mb-4">Designer</p>
-            <p>One of the best designers in the current market.With 6+ years experience.</p>
+            <p class="mb-5">One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-4">
+            <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-5">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
@@ -176,10 +176,10 @@
     <div class="container mb-4">
       <div class="row">
         <div class="col-12 mt-5 mb-4 text-center">
-          <div class="bar mb-4 barMargin"></div>
+          <div class="bar mb-4 mt-5 barMargin"></div>
           <h2 class="mb-4">Testimonials</h2>
         </div>
-        <div class="col-12 col-md-6 mb-4">
+        <div class="col-12 col-md-6 mb-5">
           <div class="card blockBackGround h-100">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
@@ -190,7 +190,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 mb-4">
+        <div class="col-12 col-md-6 mb-5">
           <div class="card blockBackGround h-100">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
@@ -233,7 +233,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center text-md-left col-md-6 mt-4">
-            <p class="opacity">©2020 tailblocks__ @knyttneve</p>
+            <p class="opacity">©2020 tailblocks__ <span class="testimonialFont">@knyttneve</span></p>
           </div>
           <div class="col-12 text-center text-md-right col-md-6 mt-4">
             <p class="opacity">Enamel pin tousled raclette tacos irony.</p>
