--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -137,7 +137,7 @@
             <p class="mb-5"> A Perfect blend of creativity and technical wizardry.The best people formulate for great customer experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/206x206.png" alt="206x206" class="ourTeamImg mb-5">
+            <img src="assets/206x206.png" alt="206x206" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
@@ -145,7 +145,7 @@
             <p class="mb-5">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
-            <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-5">
+            <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
@@ -153,7 +153,7 @@
             <p class="mb-5">10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
-            <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-5">
+            <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
@@ -161,7 +161,7 @@
             <p class="mb-5">One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
-            <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-5">
+            <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
@@ -191,7 +191,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 mb-5">
-          <div class="card blockBackGround h-100">
+          <div class="card blockBackGround h-100 mb-5">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent experience.Didn't take long for the chap delivering the car to find us at the airport once we connected to the temporary free wifi at the airport.Car was the newest vehicle i've ever driven,immaculate,only 700km on the odometer.</p>
