--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -39,10 +39,11 @@
           <p>All-inclusive,usage-based car subscriptions</p>
           <div class="row">
             <div class="col-8">
-              <div class="form-group mx-sm-3 mb-2">
-                <label for="inputPassword2" class="sr-only">Password</label>
-                <input type="Phone number" class="form-control" id="inlineFormInput" placeholder="Phone number">
-              </div>
+              <form>
+                <div class="form-group">
+                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Phone number">
+                </div>
+              </form>
             </div>
             <div class="col-4">
               <button class="btn getStartButton">
@@ -94,8 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-4 text-center text-lg-left">
-          <div class="bar mt-5 mb-5 barMargin d-md-none"></div>
-          <div class="bar mt-5 mb-5 d-none d-lg-block"></div>
+          <div class="bar mt-5 mb-5 barMargin ml-lg-0"></div>
         </div>
       </div>
       <div class="row">
