--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -80,7 +80,7 @@
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/activity.svg" class="processImage mb-2">
             <h5>You drive</h5>
-            <p class="mb-5">Hop in and go with full insurance,FasTrak,phone accessories,and unlimited mileage.</p>
+            <p class="mb-5">Hop in and go with full insurance,FasTrak phone accessories,and unlimited mileage.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-5">
             <img src="assets/check-circle.svg" class="processImage mb-2">
