--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -208,10 +208,11 @@
     <div class="container">
       <div class="row">
         <div class="col-9 col-md-4 col-lg-3 text-center">
-          <div class="form-group mx-sm-3 mb-2">
-            <label for="inputPassword2" class="sr-only">Password</label>
-            <input type="Phone number" class="form-control" id="inlineFormInput" placeholder="Phone number">
-          </div>
+          <form>
+            <div class="form-group">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Phone number">
+            </div>
+          </form>
         </div>
         <div class="col-3 col-lg-2">
           <button class="btn getStartButton">
