--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -35,7 +35,7 @@
     <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-12 col-md-5 mt-5 text-center text-md-left">
-          <h1>You drive.We will handle the rest.</h1>
+          <h1 class="mt-4">You drive.We will handle the rest.</h1>
           <p>All-inclusive,usage-based car subscriptions</p>
           <div class="row">
             <div class="col-8">
@@ -46,7 +46,7 @@
               </form>
             </div>
             <div class="col-4">
-              <button class="btn getStartButton">
+              <button class="btn buttonStyle">
                 Get Started
               </button>
             </div>
@@ -60,7 +60,7 @@
   </section>
   <section>
     <div class="blockBackGround">
-      <div class="container">
+      <div class="container handyProcessBlockPadding">
         <div class="row mb-5 mt-5">
           <div class="col-12 mt-5 mb-5 text-center">
             <div class="bar mb-5 mt-5 barMargin"></div>
@@ -70,29 +70,29 @@
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/file-text.svg" class="processImage mb-2">
             <h5>Text us</h5>
-            <p class="mb-5">When you want your car.No app needed,just an online account.Real human operators.</p>
+            <p>When you want your car.No app needed,just an online account.Real human operators.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/map-pin.svg" class="processImage mb-2">
             <h5>We deliver</h5>
-            <p class="mb-5">Your car will arrive at your door-clean and fully fueled.</p>
+            <p>Your car will arrive at your door-clean and fully fueled.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/activity.svg" class="processImage mb-2">
             <h5>You drive</h5>
-            <p class="mb-5">Hop in and go with full insurance,FasTrak phone accessories,and unlimited mileage.</p>
+            <p>Hop in and go with full insurance,FasTrak phone accessories,and unlimited mileage.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-5">
             <img src="assets/check-circle.svg" class="processImage mb-2">
             <h5>We pick it up</h5>
-            <p class="mb-5">It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
+            <p>It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
           </div>
         </div>
       </div>
     </div>
   </section>
   <section>
-    <div class="container">
+    <div class="container deliveryBlockPadding">
       <div class="row">
         <div class="col-12 col-lg-4 text-center text-lg-left">
           <div class="bar mt-5 mb-5 barMargin ml-lg-0"></div>
@@ -129,11 +129,11 @@
   </section>
   <section>
     <div class="blockBackGround">
-      <div class="container">
+      <div class="container ourTeamBlockPadding">
         <div class="row">
-          <div class="col-12 mt-5 mb-5 text-center">
-            <div class="bar mb-5 mt-5 barMargin"></div>
-            <h2 class="mb-4">OUR TEAM</h2>
+          <div class="col-12 text-center">
+            <div class="bar m-auto"></div>
+            <h2 class="mb-4 mt-5">OUR TEAM</h2>
             <p class="mb-5"> A Perfect blend of creativity and technical wizardry.The best people formulate for great customer experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
@@ -142,7 +142,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
             <p class="opacity mb-4">Founder</p>
-            <p class="mb-5">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
+            <p>He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
             <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-4">
@@ -150,7 +150,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
             <p class="opacity mb-4">UI Developer</p>
-            <p class="mb-5">10+ years experience in frontend technologies.</p>
+            <p>10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-4">
@@ -158,7 +158,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
             <p class="opacity mb-4">Designer</p>
-            <p class="mb-5">One of the best designers in the current market.With 6+ years experience.</p>
+            <p>One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-4">
@@ -166,7 +166,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
             <p class="opacity mb-4">Marketing Manager</p>
-            <p class="mb-5">Won a price best marketing startegist 2019.</p>
+            <p>Won a price best marketing startegist 2019.</p>
           </div>
         </div>
       </div>
@@ -185,17 +185,17 @@
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent and prompt customer service.A truly professional car rental company.Cars are in up-to-date condition.All payment,contract terms and transactions are transparent.Great promotions and supprot from sales team helped me get a brand
                 new SUV.Thanks to Mandad Nest.</p>
-              <p class="text-right testimonialFont">Abu Joshiy</p>
+              <p class="text-right"><b>Abu Joshiy</b></p>
               <p class="opacity text-right">24/5/2020</p>
             </div>
           </div>
         </div>
         <div class="col-12 col-md-6 mb-5">
-          <div class="card blockBackGround h-100 mb-5">
+          <div class="card blockBackGround h-100">
             <div class="card-body">
               <img src="assets/double-quote.svg" alt="double_quote" class="double_quote mb-2">
               <p>Excellent experience.Didn't take long for the chap delivering the car to find us at the airport once we connected to the temporary free wifi at the airport.Car was the newest vehicle i've ever driven,immaculate,only 700km on the odometer.</p>
-              <p class="text-right testimonialFont">Henry Kamu</p>
+              <p class="text-right"><b>Henry Kamu</b></p>
               <p class="opacity text-right">20/5/2020</p>
             </div>
           </div>
@@ -205,7 +205,7 @@
   </section>
   <hr>
   <footer>
-    <div class="container">
+    <div class="container footerPadding">
       <div class="row">
         <div class="col-9 col-md-4 col-lg-3 text-center">
           <form>
@@ -215,7 +215,7 @@
           </form>
         </div>
         <div class="col-3 col-lg-2">
-          <button class="btn getStartButton">
+          <button class="btn buttonStyle">
             Call me
           </button>
         </div>
@@ -234,7 +234,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center text-md-left col-md-6 mt-4">
-            <p class="opacity">©2020 tailblocks__ <span class="testimonialFont">@knyttneve</span></p>
+            <p class="opacity">©2020 tailblocks__ <b>@knyttneve</b></p>
           </div>
           <div class="col-12 text-center text-md-right col-md-6 mt-4">
             <p class="opacity">Enamel pin tousled raclette tacos irony.</p>
