--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -70,22 +70,22 @@
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/file-text.svg" class="processImage mb-2">
             <h5>Text us</h5>
-            <p>When you want your car.No app needed,just an online account.Real human operators.</p>
+            <p class="mb-3">When you want your car.No app needed,just an online account.Real human operators.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/map-pin.svg" class="processImage mb-2">
             <h5>We deliver</h5>
-            <p>Your car will arrive at your door-clean and fully fueled.</p>
+            <p class="mb-3">Your car will arrive at your door-clean and fully fueled.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-4">
             <img src="assets/activity.svg" class="processImage mb-2">
             <h5>You drive</h5>
-            <p>Hop in and go with full insurance,FasTrak phone accessories,and unlimited mileage.</p>
+            <p class="mb-3">Hop in and go with full insurance,FasTrak phone accessories,and unlimited mileage.</p>
           </div>
           <div class="col-12 col-md-3 text-center mb-5">
             <img src="assets/check-circle.svg" class="processImage mb-2">
             <h5>We pick it up</h5>
-            <p>It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
+            <p class="mb-3">It's yours for a few hours or a few days.Return on your own time,anywhere.and unlimited mileage.</p>
           </div>
         </div>
       </div>
