--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -35,7 +35,7 @@
     <div class="container mt-5 mb-5">
       <div class="row">
         <div class="col-12 col-md-5 mt-5 text-center text-md-left">
-          <h1 class="mt-4">You drive.We will handle the rest.</h1>
+          <h1>You drive.We will handle the rest.</h1>
           <p>All-inclusive,usage-based car subscriptions</p>
           <div class="row">
             <div class="col-8">
