--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -142,7 +142,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
             <p class="opacity mb-4">Founder</p>
-            <p>He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
+            <p class="mb-4">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
             <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-4">
@@ -150,7 +150,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
             <p class="opacity mb-4">UI Developer</p>
-            <p>10+ years experience in frontend technologies.</p>
+            <p class="mb-4">10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-4">
@@ -158,7 +158,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
             <p class="opacity mb-4">Designer</p>
-            <p>One of the best designers in the current market.With 6+ years experience.</p>
+            <p class="mb-4">One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-4">
@@ -166,7 +166,7 @@
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
             <p class="opacity mb-4">Marketing Manager</p>
-            <p>Won a price best marketing startegist 2019.</p>
+            <p class="mb-4">Won a price best marketing startegist 2019.</p>
           </div>
         </div>
       </div>
