--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -104,10 +104,10 @@
         </div>
         <div class="col-12 col-lg-4 mb-4">
           <div class="row">
-            <div class="col-2 col-md-1 col-lg-2 mb-2">
+            <div class="col-2 col-sm-1 col-lg-2 mb-2">
               <img src="assets/map.svg" alt="map">
             </div>
-            <div class="col-10 col-md-11 col-lg-10">
+            <div class="col-10 col-sm-11 col-lg-10">
               <h4>Concierge service</h4>
               <p>We deliver or pick up at your doorstep,8am - 8pm daily.Always have a parking spot right out front,just for you.</p>
             </div>
@@ -115,10 +115,10 @@
         </div>
         <div class="col-12 col-lg-4 mb-4">
           <div class="row">
-            <div class="col-2 col-md-1 col-lg-2 mb-2">
+            <div class="col-2 col-sm-1 col-lg-2 mb-2">
               <img src="assets/user.svg" alt="user">
             </div>
-            <div class="col-10 col-md-11 col-lg-10">
+            <div class="col-10 col-sm-11 col-lg-10">
               <h4>Self service</h4>
               <p class="mb-5">We deliver within 3 blocks and unlock it whenever you are ready for more flexibility on time, 24/7.</p>
             </div>
