--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -34,25 +34,25 @@
   <section>
     <div class="container mt-5 mb-5">
       <div class="row">
-        <div class="col-12 col-md-5 mt-5 text-center text-md-left">
-          <h2>You drive.We will <br> handle the rest.</h2>
+        <div class="col-12 col-md-4 mt-5 text-center text-md-left barMargin">
+          <h2>You drive.We will handle the rest.</h2>
           <p class="mt-4 mb-4">All-inclusive,usage-based car subscriptions</p>
-          <div class="row">
-            <div class="col-8 pl-5 pl-md-2">
+          <div class="row m-auto">
+            <div class="col-8 pl-md-0">
               <form>
                 <div class="form-group">
                   <input type="email" class="form-control blockBackGround border" id="exampleFormControlInput1" placeholder="Phone number">
                 </div>
               </form>
             </div>
-            <div class="col-4 pl-0 pr-5">
-              <button class="btn buttonStyle btn-md ">
+            <div class="col-4 pl-0">
+              <button class="btn buttonStyle px-4">
                 Get Started
               </button>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-7 text-center mt-5 mb-5">
+        <div class="col-12 col-md-8 text-center mt-5 mb-5">
           <img src="https://images.unsplash.com/photo-1542362565-5e18388ce357?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=olav-tvedt-5ZhglZV6yzI-unsplash.jpg" alt="car" class="carImage">
         </div>
       </div>
@@ -104,10 +104,10 @@
         </div>
         <div class="col-12 col-lg-4 mb-4">
           <div class="row">
-            <div class="col-2 col-sm-1 col-lg-2 mb-2">
+            <div class="col-2 col-md-1 col-lg-2 mb-2">
               <img src="assets/map.svg" alt="map">
             </div>
-            <div class="col-10 col-sm-11 col-lg-10">
+            <div class="col-10 col-md-11 col-lg-10">
               <h4>Concierge service</h4>
               <p>We deliver or pick up at your doorstep,8am - 8pm daily.Always have a parking spot right out front,just for you.</p>
             </div>
@@ -115,10 +115,10 @@
         </div>
         <div class="col-12 col-lg-4 mb-4">
           <div class="row">
-            <div class="col-2 col-sm-1 col-lg-2 mb-2">
+            <div class="col-2 col-md-1 col-lg-2 mb-2">
               <img src="assets/user.svg" alt="user">
             </div>
-            <div class="col-10 col-sm-11 col-lg-10">
+            <div class="col-10 col-md-11 col-lg-10">
               <h4>Self service</h4>
               <p class="mb-5">We deliver within 3 blocks and unlock it whenever you are ready for more flexibility on time, 24/7.</p>
             </div>
