--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -34,25 +34,23 @@
   <section>
     <div class="container mt-5 mb-5">
       <div class="row">
-        <div class="col-12 col-md-4 mt-5 text-center text-md-left barMargin">
-          <h2>You drive.We will handle the rest.</h2>
+        <div class="col-12 col-md-5 col-lg-4 mt-5 text-center text-md-left barMargin">
+          <h2 class="headingLineHeight">You drive.We will handle the rest.</h2>
           <p class="mt-4 mb-4">All-inclusive,usage-based car subscriptions</p>
-          <div class="row m-auto">
-            <div class="col-8 pl-md-0">
-              <form>
-                <div class="form-group">
-                  <input type="email" class="form-control blockBackGround border" id="exampleFormControlInput1" placeholder="Phone number">
-                </div>
-              </form>
+          <form>
+            <div class="form-row">
+              <div class="col-8">
+                <input type="text" class="form-control blockBackGround border" placeholder="Phone Number">
+              </div>
+              <div class="col-4">
+                <button class="btn buttonStyle px-4 d-inline-block mb-1">
+                  Get Started
+                </button>
+              </div>
             </div>
-            <div class="col-4 pl-0">
-              <button class="btn buttonStyle px-4">
-                Get Started
-              </button>
-            </div>
-          </div>
+          </form>
         </div>
-        <div class="col-12 col-md-8 text-center mt-5 mb-5">
+        <div class="col-12 col-md-7 col-lg-8 text-center text-md-right mt-5 mb-5">
           <img src="https://images.unsplash.com/photo-1542362565-5e18388ce357?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&dl=olav-tvedt-5ZhglZV6yzI-unsplash.jpg" alt="car" class="carImage">
         </div>
       </div>
@@ -141,32 +139,32 @@
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Henry Letham</h5>
-            <p class="opacity mb-4">Founder</p>
-            <p class="mb-4">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
+            <p class="opacity mb-2">Founder</p>
+            <p class="mb-5">He earned his bachelor's degree at the University of Maryland,College Park and PhD in computer science from Stanford University.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center">
             <img src="assets/200x200.png" alt="200x200" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Holden Caulfield</h5>
-            <p class="opacity mb-4">UI Developer</p>
-            <p class="mb-4">10+ years experience in frontend technologies.</p>
+            <p class="opacity mb-2">UI Developer</p>
+            <p class="mb-5">10+ years experience in frontend technologies.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/201x201.png" alt="201x201" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Alper Kamu</h5>
-            <p class="opacity mb-4">Designer</p>
-            <p class="mb-4">One of the best designers in the current market.With 6+ years experience.</p>
+            <p class="opacity mb-2">Designer</p>
+            <p class="mb-5">One of the best designers in the current market.With 6+ years experience.</p>
           </div>
           <div class="col-12 col-md-4 col-lg-3 text-center ">
             <img src="assets/204x204.png" alt="204x204" class="ourTeamImg mb-4">
           </div>
           <div class="col-12 col-md-8 col-lg-3 text-center text-md-left m-auto">
             <h5>Atticus Finch</h5>
-            <p class="opacity mb-4">Marketing Manager</p>
-            <p class="mb-4">Won a price best marketing startegist 2019.</p>
+            <p class="opacity mb-2">Marketing Manager</p>
+            <p class="mb-5">Won a price best marketing startegist 2019.</p>
           </div>
         </div>
       </div>
@@ -244,4 +242,5 @@
     </div>
   </footer>
 </body>
+
 </html>
