--- a/assignments/assignment-31/index.html
+++ b/assignments/assignment-31/index.html
@@ -43,9 +43,9 @@
                 <input type="text" class="form-control blockBackGround border" placeholder="Phone Number">
               </div>
               <div class="col-4">
-                <button class="btn buttonStyle px-3">
-                  Get Started
-                </button>
+                <button class="btn buttonStyle btn-md px-4">
+                Get Started
+              </button>
               </div>
             </div>
           </form>
@@ -111,7 +111,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 mb-4">
+        <div class="col-12 col-lg-4 mb-4 ">
           <div class="row">
             <div class="col-2 col-sm-1 col-lg-2 mb-2">
               <img src="assets/user.svg" alt="user">
@@ -208,12 +208,12 @@
         <div class="col-9 col-md-4 col-lg-3 text-center">
           <form>
             <div class="form-group">
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Phone number">
+              <input type="email" class="form-control blockBackGround border" id="exampleFormControlInput1" placeholder="Phone number">
             </div>
           </form>
         </div>
-        <div class="col-3 col-md-2">
-          <button class="btn buttonStyle">
+        <div class="col-3 col-md-2 pl-0">
+          <button class="btn buttonStyle px-3">
             Call me
           </button>
         </div>
@@ -231,10 +231,10 @@
     <div class="blockBackGround">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center text-md-left col-md-6 mt-4">
-            <p class="opacity">©2020 tailblocks__ <b>@knyttneve</b></p>
+          <div class="col-12 text-center text-md-left col-md-6 mt-3">
+            <p class="opacity mb-0">©2020 tailblocks__ <b>@knyttneve</b></p>
           </div>
-          <div class="col-12 text-center -right col-md-6 mt-4">
+          <div class="col-12 text-center -right col-md-6 mt-1 mt-md-3">
             <p class="opacity">Enamel pin tousled raclette tacos irony.</p>
           </div>
         </div>
