--- a/resume1.html
+++ b/resume1.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
         </section>
-        <div class="container blockColor mt-4">
+        <div class="container blockColor ">
             <div class="row">
                 <div class="col-12">
                     <h2 class="skillsContext">Personal info</h2>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <section>
-            <div class="container mt-4 blockColor">
+            <div class="container blockColor">
                 <div class="row">
                     <div class="col-12 col-md-12">
                         <h2 class="mb-4 skillsContext">Skills</h2>
@@ -57,7 +57,7 @@
             </div>
         </section>
         <section>
-            <div class="container mt-4 blockColor">
+            <div class="container blockColor">
                 <div class="row">
                     <div class="col-12">
                         <h2>Languages i speak</h2>
@@ -73,7 +73,7 @@
             </div>
         </section>
         <section>
-            <div class="container mt-4 blockColor">
+            <div class="container blockColor">
                 <div class="row">
                     <div class="col-12">
                         <h2>Experience</h2>
@@ -88,7 +88,7 @@
             </div>
         </section>
         <section>
-            <div class="container mt-4 blockColor">
+            <div class="container blockColor">
                 <div class="row">
                     <div class="col-12">
                         <h2>Education</h2>
@@ -109,7 +109,7 @@
             </div>
         </section>
         <section>
-            <div class="container mt-4 blockColor">
+            <div class="container blockColor">
                 <div class="row">
                     <div class="col-12">
                         <h2>Certificates</h2>
@@ -118,6 +118,15 @@
                     <div class="col-12">
                         <li><h5>2019</h5><p>Things Conference Participation</p></li>
                         <li><h5>2017</h5><p>Cambridge Certificate</p></li>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container blockColor">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <a href="my_portfolio.html">Back to portfolio :-)</a>
                     </div>
                 </div>
             </div>
